# dit-flow-matching

./: .gitignore  README.md  ablation.py  data_utils.py  fid.py  flow.py  grid.py  model.py  pyproject.toml  requirements.txt  sample.py  train.py
slurm/: ablation.slurm  train.slurm
